# bodkin

./: Cargo.toml  README.md
rust/bodkin/: Cargo.toml
rust/bodkin-derive/: Cargo.toml
rust/bodkin-derive/src/: arrow_integration.rs  lib.rs
rust/bodkin/src/: lib.rs
rust/usage/: Cargo.toml
rust/usage/src/: main.rs
