[package]
name = "bodkin-derive"
version = "0.1.1"
edition.workspace = true
description = "Proc macro to simplify the integration of Arrow Data."
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
