[package]
name = "bodkin-derive"
version = "0.1.15"
edition.workspace = true
description = "Proc macro to simplify the integration of Arrow Data."
documentation = "https://docs.rs/bodkin"
readme = "../../README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
rstest = "0.23.0"
